namespace TaskScheduler;

public class SchedulerConfiguration
{
    public List<string> Tasks { get; set; }
}