namespace TaskScheduler;

public record TaskState(string Name, DateTime NextLaunch);